# Tell

./: .gitignore  README.md  install_alias.sh  main.py  pyproject.toml  requirements.txt  tell.sh
src/tell/: __init__.py  cli.py  utils.py
